--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 .spaziaturaprodotti{
   margin-bottom: 25px;
 }
+
+body {
+  min-height: 100vh;
+  margin: 0;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
