--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ fieldset {
 	width:100%;
 	border:none;
 	background:#316cf4;
-	color:#FFF;
+	color:#F9F9F9;
 	margin:0 0 5px;
 	padding:10px;
 	font-size:15px;
