--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 #contact {
-	background:#FFFFFF;
+	background:#F9F9F9;
 	padding:25px;
 	margin:50px 0;
 }
@@ -94,7 +94,7 @@ fieldset {
 	width:100%;
 	border:none;
 	background:#316cf4;
-	color:#F9F9F9;
+	color:#FFF;
 	margin:0 0 5px;
 	padding:10px;
 	font-size:15px;
