--- a/style.css
+++ b/style.css
@@ -33,17 +33,16 @@ body {
 }
 
 
-
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 #contact {
-	background:#F9F9F9;
+	background:#ffffff;
 	padding:25px;
 	margin:50px 0;
 }
 
 #contact h3 {
-	color: #316cf4;
+	color: rgb(193, 49, 49);
 	display: block;
 	font-size: 30px;
 	font-weight: 400;
@@ -88,7 +87,7 @@ fieldset {
 	cursor:pointer;
 	width:100%;
 	border:none;
-	background:#316cf4;
+	background:rgb(237, 7, 7);
 	color:#FFF;
 	margin:0 0 5px;
 	padding:10px;
@@ -96,7 +95,7 @@ fieldset {
 }
 
 #contact button[type="submit"]:hover {
-	background:#09C;
+	background:rgb(148, 21, 7);
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
