--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 body {
-	font-family:"Open Sans", Helvetica, Arial, sans-serif;
+	font-family:"Gotham", Helvetica, Arial, sans-serif;
 	font-weight:300;
 	font-size: 12px;
 	line-height:30px;
@@ -36,7 +36,7 @@ body {
 }
 
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Gotham", Helvetica, Arial, sans-serif; }
 
 #contact {
 	background:#ffffff;
