--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 body {
-	font-family:"Gotham", Helvetica, Arial, sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-weight:300;
 	font-size: 12px;
 	line-height:30px;
